--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -133,3 +133,23 @@ body {
     }
   }
 }
+
+.edit-profile-ctr {
+  @apply max-w-screen-2xl mx-auto grid grid-flow-row grid-cols-2 justify-evenly items-center gap-2 m-10 p-10 w-auto border-2 rounded-xl;
+  
+  .profile-info {
+    @apply text-big flex flex-col items-center justify-center;
+    
+    p {
+      @apply italic text-center;
+    }
+  }
+  
+  .edit-panel {
+    input {
+      @apply text-slate-950 p-1 ps-2;
+      background: #e7e7e2;
+      color: #180000;
+    }
+  }
+}
