dodan font-awesome, proljepsan 404

--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -133,3 +133,15 @@ body {
     }
   }
 }
+
+.notfound {
+  @apply flex flex-col justify-center items-center h-screen;
+  
+  h1 {
+    @apply text-huge;
+  }
+  
+  p {
+    @apply text-medium italic; 
+  }
+}
