--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -41,6 +41,10 @@ body {
   @apply text-base;
 }
 
+.loading-placeholder {
+  @apply max-w-screen-xl mx-auto flex flex-col items-center align-middle justify-center my-48 text-huge italic;
+}
+
 .user-profile {
   @apply flex flex-row grid-cols-3 justify-between gap-12 mx-8 py-10 z-10;
   
