--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -14,6 +14,7 @@
 
 body {
   @apply bg-primary-800 text-accent-100 scroll-smooth;
+  scroll-behavior: smooth;
 }
 
 .inset-padding {
@@ -167,4 +168,57 @@ body {
       @apply absolute right-0 pr-4 mt-10 bottom-0 text-accent-200;
     }
   }
+}
+
+.course-page {
+  @apply max-w-screen-xl mx-auto flex flex-row flex-shrink;
+  /* @apply max-w-screen-xl mx-auto grid grid-flow-row grid-cols-2 space-y-4 gap-4 justify-center items-center my-4; */
+  
+    .course-card {
+    @apply relative
+    p-4 pl-2 w-auto mx-6
+    border-2 rounded-xl border-accent-700 
+    transition-all duration-200;
+    
+    .title {
+      @apply pl-2 pb-2 text-medium overflow-hidden grid grid-flow-row grid-cols-1 justify-center place-items-center;
+    }
+    
+    .separator {
+      @apply w-full mx-auto opacity-75 pb-3;
+    }
+    
+    .about {
+      @apply pl-2 pb-2 text-small;
+    }
+    
+    .course-id {
+      @apply absolute right-0 pr-4 mt-10 bottom-0 text-accent-200;
+    }
+  }
+}
+
+
+.dialog-scroll::-webkit-scrollbar {
+  @apply rounded-xl pr-4 right-4;
+  background: #d3d3d3;
+  opacity: 0.1;
+  width: 6px;
+}
+
+::-webkit-scrollbar {
+  @apply rounded-xl pr-4 right-4;
+  background: #210c0c;
+  opacity: 0.1;
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply rounded-xl bg-accent-300 right-4 pr-4;
+ /* background: #212121;  */
+}
+
+
+.dialog-scroll::-webkit-scrollbar-thumb {
+  
 }
