finished edit profile

--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -168,3 +168,12 @@ body {
     }
   }
 }
+
+.MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
+    border-color: rgba(235, 235, 235, 0.85);
+}
+
+.MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
+  @apply rounded-lg border-2;
+    border-color: rgba(235, 235, 235, 0.35);
+}
