--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -185,7 +185,9 @@ body {
   .add-ctg-ctr {
     @apply rounded-lg w-2/3 h-auto p-5 m-5;
     border: 1px solid #fefefe;
-  }
+  } 
+}
+
 .courses-list-ctr {
   @apply max-w-screen-xl mx-auto py-16 grid grid-flow-row grid-cols-3 space-y-4 gap-4 justify-between items-center;
   
@@ -215,4 +217,15 @@ body {
       @apply absolute right-0 pr-4 mt-10 bottom-0 text-accent-200;
     }
   }
+}
+
+::-webkit-scrollbar {
+  @apply rounded-xl pr-4 right-4 py-2;
+  background: rgba(121, 100, 121, 0);
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply rounded-xl right-4 pr-4 my-2;
+ background: #c5c5c5; 
 }
