--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -168,3 +168,14 @@ body {
     }
   }
 }
+
+::-webkit-scrollbar {
+  @apply rounded-xl pr-4 right-4 py-2;
+  background: rgba(121, 100, 121, 0);
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply rounded-xl right-4 pr-4 my-2;
+ background: #c5c5c5; 
+}
