--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -139,7 +139,7 @@ body {
 }
 
 .notfound {
-  @apply flex flex-col justify-center items-center h-screen;
+  @apply flex flex-col justify-center items-center mt-20;
   
   h1 {
     @apply text-huge;
