--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -216,6 +216,7 @@ body {
 .MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
   @apply rounded-lg border-2;
     border-color: rgba(235, 235, 235, 0.35);
+}
 
 ::-webkit-scrollbar {
   @apply rounded-xl pr-4 right-4 py-2;
